[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/pics/elsa1.png" type="Texture" id=1]
[ext_resource path="res://assets/pics/elsa2.png" type="Texture" id=2]
[ext_resource path="res://assets/pics/elsa4.png" type="Texture" id=3]
[ext_resource path="res://assets/pics/elsa3.png" type="Texture" id=4]
[ext_resource path="res://assets/shaders/Grey_Elsa.gdshader" type="Shader" id=5]
[ext_resource path="res://scripts/Grey_Elsa.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 81.5, 98 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 125.5, 161 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 111, 173 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 265, 255.5 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 5 )

[node name="Grey_Elsa" type="Node2D"]
script = ExtResource( 6 )

[node name="head" type="Area2D" parent="." groups=["head"]]

[node name="head_hit_box" type="CollisionShape2D" parent="head"]
position = Vector2( -0.5, 7 )
shape = SubResource( 3 )

[node name="Grey_Elsa_head" type="Sprite" parent="head"]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="torso" type="Area2D" parent="." groups=["torso"]]

[node name="torso_hit_box" type="CollisionShape2D" parent="torso"]
position = Vector2( 16.5, 266 )
shape = SubResource( 4 )

[node name="Grey_Elsa_Torso" type="Sprite" parent="torso"]
material = SubResource( 7 )
position = Vector2( 37, 265 )
texture = ExtResource( 2 )

[node name="hand" type="Area2D" parent="." groups=["hand"]]

[node name="hand_hit_box" type="CollisionShape2D" parent="hand"]
position = Vector2( -221, 110 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Grey_Elsa_Hand" type="Sprite" parent="hand"]
material = SubResource( 8 )
position = Vector2( -217, 117 )
texture = ExtResource( 3 )

[node name="bottom" type="Area2D" parent="." groups=["bottom"]]

[node name="bottom_hit_box" type="CollisionShape2D" parent="bottom"]
position = Vector2( 156, 679.5 )
shape = SubResource( 6 )

[node name="Grey_Elsa_Bottom" type="Sprite" parent="bottom"]
material = SubResource( 9 )
position = Vector2( 154, 683 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="head" to="." method="_on_head_area_entered"]
[connection signal="area_entered" from="torso" to="." method="_on_torso_area_entered"]
[connection signal="area_entered" from="hand" to="." method="_on_hand_area_entered"]
[connection signal="area_entered" from="bottom" to="." method="_on_bottom_area_entered"]
